Attempted Mobile Navbar Spacing Fix

--- a/_sass/includes/navbar.scss
+++ b/_sass/includes/navbar.scss
@@ -22,34 +22,45 @@ nav.main {
         }
 
         .links {
+            justify-content: center;
+            align-items: center;
             visibility: hidden;
             opacity: 0;
-            max-height: 0;
+            max-height: 0px;
             transition: visibility 0s, opacity 0.3s, max-height 0.3s;
+
+            .link {
+                min-width: 6rem;
+                align-items: center;
+                display: flex;
+                padding-top: 0px;
+                padding-bottom: 0px;
+                transition: padding-top 0.3s, padding-bottom 0.3s;
+
+                > * {
+                    height: 100%;
+                }
+            }
         }
 
         .links.active {
             visibility: visible;
             opacity: 1;
-            max-height: 13rem;
+            max-height: 16rem;
 
-            > .link {
-                min-width: 6rem;
-                align-items: center;
-                display: flex;
-                margin-top: .25rem;
-                margin-bottom: .25rem;
-
-                > * {
-                    height: 100%;
-                    transition: transform .1s;
-                }
+            .link {
+                padding-top: .25rem;
+                padding-bottom: .25rem;
             }
         }
 
         .dots {
             display: none;
+            visibility: hidden;
+            opacity: 0;
+            max-height: 0px;
             margin: 0px;
+            padding: 0px;
         }
     }
 
@@ -66,6 +77,31 @@ nav.main {
             > * {
                 background-color: $clr-cream;
             }
+        }
+
+        .link {
+            color: $clr-jalapeno-red;
+            min-width: 6rem;
+            align-items: center;
+            display: flex;
+
+            > * {
+                height: 100%;
+                transition: transform .1s;
+            }
+        }
+
+        .link:hover {
+            color: $clr-mandarin-red;
+
+            > * {
+                transform: translateY(-0.25rem) scale(1.1);
+            }
+        }
+
+        .links {
+            justify-content: center;
+            align-items: center;
         }
 
         .dots {
@@ -172,31 +208,6 @@ nav.main {
     .home-logo {
         width: 100%;
         flex: 1 1 0px;
-    }
-
-    .link {
-        color: $clr-jalapeno-red;
-        min-width: 6rem;
-        align-items: center;
-        display: flex;
-
-        > * {
-            height: 100%;
-            transition: transform .1s;
-        }
-    }
-
-    .link:hover {
-        color: $clr-mandarin-red;
-
-        > * {
-            transform: translateY(-0.25rem) scale(1.1);
-        }
-    }
-
-    .links {
-        justify-content: center;
-        align-items: center;
     }
 
     .current-page {
